# curdle

./: .gitignore  Cargo.toml  README.md
src/: curdle.rs  main.rs
src/curdle/: json.rs  validation.rs
